# machine-sign

./: Makefile  build.mjs  package-lock.json  package.json  pyproject.toml  readme.md  start.sh  tsconfig.json  webpack.config.js
resources/: mockup.html
resources-original/safety-icons/eps/: acid-falling-on-hand.eps  bike-horn.eps  dog-head.eps  electrocution-risk-sign.eps  face-shield.eps  fire-extinguisher.eps  forklift.eps  gas-mask.eps  hook-hanging-material.eps  loaded-truck-side-view.eps  locked-padlock-with-chain.eps  medical-mask.eps  motorbike-helmet.eps  protection-gloves.eps  reflective-vest.eps  rock-landslide-safety-sign.eps  safety-glasses.eps  safety-shirt.eps  seat-belt-on-silhouette.eps  silhouette-crossing-street.eps  silhouette-with-safety-headphone.eps  sprained-ankle.eps  surveillance-camera.eps  traffic-cones.eps  two-knots-rope.eps  woman-boots.eps  worker-silhouette.eps  worker-with-gas-mask.eps  worker-with-harness.eps  working-coverall.eps
resources-original/safety-icons/font/: Flaticon.eot  _flaticon.scss  flaticon.css  flaticon.html
resources-original/safety-icons/license/: license.html
resources-original/safety-icons/psd/: acid-falling-on-hand.psd  bike-horn.psd  dog-head.psd  electrocution-risk-sign.psd  face-shield.psd  fire-extinguisher.psd  forklift.psd  gas-mask.psd  hook-hanging-material.psd  loaded-truck-side-view.psd  locked-padlock-with-chain.psd  medical-mask.psd  motorbike-helmet.psd  (+17 more)
src/: all.tsx  blah.tsx  data.ts  main.py  main.ts  main.tsx  style.scss  view_common.tsx  view_preview.tsx  view_settings.tsx
