[tool.poetry]
name = "machine-sign"
version = "0.1.0"
description = ""
authors = ["Aron Granberg <aron.granberg@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
